--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,9 +21,40 @@
                 <td> lowercase </td>
                 <td> {{nombre | lowercase}} </td>
             </tr>
+            <tr>
+                <td> {{nombre}} </td>
+                <td> slice:3 </td>
+                <td> {{nombre | slice:3}} </td>
+            </tr>
+            <tr>
+                <td> {{nombre}} </td>
+                <td> slice:0:3 </td>
+                <td> {{nombre | slice:0:3}} </td>
+            </tr>
+            <tr>
+                <td> {{array}} </td>
+                <td> slice:1:5 </td>
+                <td> {{array | slice:5:15}} </td>
+            </tr>
+            <tr>
+                <td> {{PI}} </td>
+                <td> number:'3.0-0' </td>
+                <td> {{PI | number:'3.0-0'}} </td>
+            </tr>
+            <tr>
+                <td> {{PI}} </td>
+                <td> number:'1.0-2' </td>
+                <td> {{PI | number:'1.0-2'}} </td>
+            </tr>
         </tbody>
 
 
     </table>
+
+
+    <h4>Slice</h4>
+    <ul>
+        <li *ngFor="let item of array">{{item}}</li>
+    </ul>
 
 </div>
