--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,6 +76,11 @@
                 <td> currency:'EUR':true:'4.0-0' </td>
                 <td> {{salario | currency:'EUR':true:'4.0-0'}} </td>
             </tr>
+            <tr>
+                <td> {{valorDePromesa}} </td>
+                <td> async </td>
+                <td> {{valorDePromesa | async}} </td>
+            </tr>
         </tbody>
 
 
